--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Weather App</title>
+
+    <link rel="shortcut icon" href="./imges/logo@2x.png" type="image/x-icon">
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -10,6 +12,7 @@
     />
 
     <!-- Bootstrap CSS v5.2.1 -->
+    
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -119,9 +122,9 @@
               class="dropdown-menu bg-dark-subtle text-white"
               aria-labelledby="triggerId"
             >
+              <button class="dropdown-item" value="1">1</button>
               <button class="dropdown-item" value="2">2</button>
               <button class="dropdown-item" value="3">3</button>
-              <button class="dropdown-item" value="4">4</button>
             </div>
           </div>
         </div>
