--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Weather App</title>
 
-    <link rel="shortcut icon" href="./imges/logo@2x.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./weather/64x64/day/116.png"  type="image/x-icon">
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -22,8 +22,8 @@
     <header>
       <nav class="navbar navbar-expand-lg p-5">
         <div class="container justify-content-between">
-          <a class="navbar-brand d-flex" href="#">
-            <div><img src="./imges/logo@2x.png" alt="logo" class="w-75" /></div>
+          <a class="navbar-brand d-flex align-items-center gap-3 justify-content-between" href="#">
+            <div ><img src="./weather/64x64/day/116.png" alt="logo" class="w-100" /></div>
             <div class="brand-name">
               <h1>Weather</h1>
               <p>tagline goes here</p>
