--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <title>Weather App</title>
 
-    <link rel="shortcut icon" href="./weather/64x64/day/116.png"  type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./weather/64x64/day/116.png"
+      type="image/x-icon"
+    />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -12,7 +16,7 @@
     />
 
     <!-- Bootstrap CSS v5.2.1 -->
-    
+
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -22,8 +26,13 @@
     <header>
       <nav class="navbar navbar-expand-lg p-5">
         <div class="container justify-content-between">
-          <a class="navbar-brand d-flex align-items-center gap-3 justify-content-between" href="#">
-            <div ><img src="./weather/64x64/day/116.png" alt="logo" class="w-100" /></div>
+          <a
+            class="navbar-brand d-flex align-items-center gap-3 justify-content-between"
+            href="#"
+          >
+            <div>
+              <img src="./weather/64x64/day/116.png" alt="logo" class="w-100" />
+            </div>
             <div class="brand-name">
               <h1>Weather</h1>
               <p>tagline goes here</p>
